Update package.json scripts and modify main.ejs title and logo alt text

--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>
-    <%= typeof title !='undefined' ? title: 'Cooking Blog - Made with Node.js' %>
+    <%= typeof title !='undefined' ? title: 'Plated Poetry | Place to find Delicious Food Recipes' %>
   </title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
@@ -24,7 +24,7 @@
     <header
       class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
       <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
-        <img src="/img/logo.svg" width="229" height="68" alt="Cooking Blog - Made with Node.js">
+        <img src="/img/logo.svg" width="229" height="68" alt="Plated Poetry">
       </a>
 
       <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
